files/k8s/apps/ingress-nginx.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx 
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: cluster-pi.k8s 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginx 
          servicePort: http
